--- a/KnifeShop/pom.xml
+++ b/KnifeShop/pom.xml
@@ -25,6 +25,11 @@
     </plugins>
   </build>
   <dependencies>
+    <dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	</dependency>
   	<dependency>
 	    <groupId>org.webjars</groupId>
 	    <artifactId>jquery</artifactId>
